select tag out of place fixed

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -746,6 +746,9 @@ img {
         width: 100%;
         justify-content: space-between;
     }
+    .forms-container form:last-child {
+        margin: 0;
+    }
     /* .nav-list {
         position: absolute;
         display: block;
